--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,21 +5,22 @@ body {
     width: auto;
     max-height: 100vh;
     display: flex;
-    justify-content: center;
-    
+    justify-content: center;    
 }
 
 .card {
     background-color: hsl(0, 0%, 100%);
-    width: 280px;
+    width: 300px;
     height: 460px;
-    padding: 18px;
+    padding: 16px;
     border-radius: 18px;
     margin: 5rem 0 10rem 0;
+    box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.103);
+    text-align: center;
 }
 
 .qr-code {
-    height: 60%;
+    height: 62%;
 }
 
 .qr-code > img {
@@ -29,22 +30,24 @@ body {
 }
 
 .card-description {
-    height: 40%;
+    height: 34%;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
     font-family: 'Outfit', sans-serif;
-    padding: 10px;
+    padding: 25px;
+    gap: 16px;
 }    
 
 .card-description > h1 {
     color: hsl(218, 44%, 22%);
     font-size: 22px;
     font-weight: 700;
+    line-height: 1.3em;
 }
 
 .card-description > p {
     color: hsl(220, 15%, 55%);
     font-size: 15px;
     font-weight: 400;
+    line-height: 1.4em;
 }
