--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -4,7 +4,7 @@
         max-height: 100vh;
     }
 
-    .card {
+    main {
         min-width: 300px;
         min-height: 460px;
         margin: 4rem 2rem 0 2rem ;
